Abandoned : Abandoned : adj. 1 deserted, forsaken. 2 unrestrained, profligate.
Zoroastrian : Zoroastrian : (also zarathustrian) —adj. Of zoroaster (or zarathustra) or the dualistic religious system taught by him. —n. Follower of zoroaster.  zoroastrianism n. [zoroaster, persian founder of the religion]
Zonked : Zonked : adj. Slang (often foll. By out) exhausted; intoxicated. [zonk hit]
Zonked : Zonked : adj. Slang (often foll. By out) exhausted; intoxicated. [zonk hit]
Neophyte : Neophyte : n. 1 new convert. 2 rc ch. Novice of a religious order. 3 beginner. [greek phuton plant]