@@ -1,0 +1,5 @@
+{
+    "files.associations": {
+        "xiosbase": "cpp"
+    }
+}
