@@ -3,3 +3,4 @@ Zoroastrian : Zoroastrian : (also zarathustrian) —adj. Of zoroaster (or zarath
 Zonked : Zonked : adj. Slang (often foll. By out) exhausted; intoxicated. [zonk hit]
 Zonked : Zonked : adj. Slang (often foll. By out) exhausted; intoxicated. [zonk hit]
 Neophyte : Neophyte : n. 1 new convert. 2 rc ch. Novice of a religious order. 3 beginner. [greek phuton plant]
+Access : Access :road  n. Road giving access only to the properties along it.
